--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
     "version": "1.0",
     "manifest_version": 3,
     "background": {
-        "page": "background.html"
+        "service_worker": "background.js"
     },
     "action": {
         "default_icon": {
