--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,8 @@
     "default_locale": "en",
     "version": "1.0",
     "manifest_version": 3,
+    "offline_enabled": false,
+    "homepage_url": "https://puddy.club",
     "background": {
         "service_worker": "background.js"
     },
@@ -22,7 +24,9 @@
         "contextMenus",
         "activeTab",
         "scripting",
-        "webRequest"
+        "webNavigation",
+        "webRequest",
+        "webRequestBlocking"
     ],
     "options_page": "index.html",
     "icons": {
@@ -30,5 +34,10 @@
         "16": "icons/icon_16.png",
         "48": "icons/icon_48.png"
     },
+    "content_scripts": [{
+        "js": ["startPage.js"],
+        "matches": ["<all_urls>"],
+        "run_at": "document_start"
+    }],
     "host_permissions": ["<all_urls>"]
 }
