--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,9 @@
             "38": "icons/icon_38.png"
         }
     },
+    "omnibox": { "keyword": "aaron" },
     "permissions": [
+        "webNavigation",
         "background",
         "storage",
         "unlimitedStorage",
