--- a/manifest.json
+++ b/manifest.json
@@ -8,13 +8,15 @@
     "manifest_version": 3,
     "offline_enabled": false,
     "homepage_url": "https://puddy.club",
+    "background": {
+        "service_worker": "background.js"
+    },
     "action": {
         "default_icon": {
             "19": "icons/icon.png",
             "38": "icons/icon_38.png"
         }
     },
-    "omnibox": { "keyword": "ipfs" },
     "permissions": [
         "webNavigation",
         "background",
