--- a/manifest.json
+++ b/manifest.json
@@ -18,6 +18,7 @@
         }
     },
     "permissions": [
+        "contentSettings",
         "webNavigation",
         "background",
         "storage",
