resize event added

--- a/manifest.json
+++ b/manifest.json
@@ -19,6 +19,7 @@
         "unlimitedStorage",
         "activeTab",
         "webRequest",
+        "tabs",
         "history"
     ],
     "icons": {
