--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
     "version": "0.1.0",
     "manifest_version": 3,
     "offline_enabled": false,
-    "homepage_url": "https://puddy.club",
+    "homepage_url": "https://github.com/TinyPudding/FlipClip-Browser",
     "background": {
         "service_worker": "background.js"
     },
